fix(): disable  history btn for prevent render white space

--- a/src/Components/Propitem.css
+++ b/src/Components/Propitem.css
@@ -159,7 +159,8 @@
 }
 
 .propitem--buttons--history {
-  visibility: hidden;
+  /* visibility: hidden; */
+  display: none;
 }
 
 .propitem--buttons--favorite,
